syntax="proto3";

package events;

import "vpn_event.proto";
import "client.proto";
import "debug_runcmd.proto";
import "debug_tun.proto";
import "dns_report.proto";
import "interfaces.proto";
import "path_report.proto";
import "pcap_report.proto";
import "system.proto";
import "traceroute_report.proto";
import "usb.proto";
import "syslog.proto";
import "dns.proto";
import "arp.proto";
import "debug_wanopt_netstat.proto";
import "ping.proto";
import "cgnat.proto";
import "deviceha.proto";

message Empty {}

service CubsEventReport {
  // client
  rpc ClientInfoUpdate(ClientInfo) returns (Empty) {}
  rpc ClientTimeout(ClientInfo) returns (Empty) {}
  rpc UserLogin(UserInfo) returns (Empty) {}
  rpc UserLogout(UserInfo) returns (Empty) {}

  // interfaces
  rpc IPChanged(Interfaces) returns (Empty) {}
  rpc InterfaceStatusChange(Interfaces) returns (Empty) {}
  rpc LivemonStopped(Interface) returns (Empty) {}
  rpc LinkStateChange(Interfaces) returns (Empty) {}
  rpc PortStateChange(Ports) returns (Empty) {}

  // system
  rpc FirmwareDownloadDone(FirmwareDownloaded) returns (Empty) {}
  rpc FirmwareDownloadReport(FirmwareDownloadProcess) returns (Empty) {}
  rpc FirmwareUpgradeStart(FirmwareUpgradeStarted) returns (Empty) {}
  rpc SystemAlert(SystemAlertMessage) returns (Empty) {}
  rpc PackageUpgradeStart(PackageUpgradeStartMessage) returns (Empty) {}
  rpc PackageUpgradeResult(PackageUpgradeResultMessage) returns (Empty) {}
  rpc DiskLogUpload(DiskLogUploadMessage) returns (Empty) {}

  // usb
  rpc USBDeviceDetected(USBDeviceInfo) returns (Empty) {}
  rpc USBDeviceRemoved(USBDeviceInfo) returns (Empty) {}

  // vpn
  rpc VPNTestDone(VPNTestResult) returns (Empty) {}
  rpc OnVPNEvent(VPNEvent) returns (Empty) {}

  // debug-tun
  rpc TunnelEstablished(DebugTunnelInfo) returns (Empty) {}
  rpc TunnelDisconnected(DebugTunnelInfo) returns (Empty) {}

  // debug-runcmd
  rpc CommandExecuted(DebugCommand) returns (Empty) {}

  // ping done
  rpc PingDone(PingReport) returns (Empty) {}

  // traceroute done
  rpc TracerouteDone(TracerouteReport) returns (Empty) {}

  // dns query done
  rpc DNSQueryDone(DNSReport) returns (Empty) {}

  // pcap stop
  rpc PacketCaptureStopped(PacketCaptureReport) returns (Empty) {}
  rpc PacketCaptureUploaded(PacketCaptureUploadedMessage) returns (Empty) {}

  // list-path-done
  rpc ListPathDone(ListPathReport) returns (Empty) {}

  // syslog
  rpc ReportDeviceLog(stream Devicelog) returns (Empty) {}

  // dns
  rpc ReportDNSAnswer(stream DnsAnswer) returns (Empty) {}

  // arp
  rpc ReportARPTable(ARPTable) returns (Empty) {}

  // debug-wanopt
  rpc ReportWanoptNetstat(DebugWanoptNetstat) returns (Empty) {}

  // cgnat
  rpc OnCGNATEvent(CGNATEvent) returns (Empty) {}

  // DeviceHA
  rpc ReportDeviceHAStatus(DeviceHAStatus) returns (Empty) {}
}
